refactor: replace containerd/containerd/v2 module for proper DCE
Upstream PR: https://github.com/containerd/containerd/pull/12175

See https://github.com/siderolabs/talos/issues/11296

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 2dce8f8d4693a85d2f3bf46169af8cf502d49f9d)

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -83,6 +83,7 @@ linters:
         - cloud.google.com/go
         - github.com/mdlayher/ethtool
         - github.com/insomniacslk/dhcp
+        - github.com/containerd/containerd/v2
       replace-local: true
       exclude-forbidden: false
       retract-allow-no-explanation: false
