feat: update default Kubernetes to v1.34.0-rc.1
See https://github.com/kubernetes/kubernetes/releases/tag/v1.34.0-rc.1

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,7 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.12.40
-Kubernetes: 1.34.0-beta.0
+Kubernetes: 1.34.0-rc.1
 runc: 1.3.0
 etcd: 3.6.4
 containerd: 2.1.4
