--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,7 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.12.43
-Kubernetes: 1.34.0-rc.2
+Kubernetes: 1.34.0
 runc: 1.3.0
 etcd: 3.6.4
 containerd: 2.1.4
