feat: use the id of the volume in the mapped luks2 name
Fixes #11662

The name of the mapped volumes is normalized to be
`/dev/mapper/<id>-luks2`.

Signed-off-by: Mike Beaumont <mjboamail@gmail.com>
Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -27,6 +27,14 @@ systemd-udevd: 257.8
 Talos is built with Go 1.25.0.
 """
 
+    [notes.luks2]
+        title = "Encrypted Volumes"
+        description = """\
+Talos Linux now consistently provides mapped names for encrypted volumes in the format `/dev/mapper/luks2-<volume-id>`.
+This change should not affect system or user volumes, but might allow easier identification of encrypted volumes,
+and specifically for raw encrypted volumes.
+"""
+
 [make_deps]
 
     [make_deps.tools]
