feat: update CoreDNS to 1.12.3
Also update host DNS base coredns module to 1.12.3+.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 9cae7ba6b97a67a5d282c6f667ccb4c3e2111447)

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,6 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.12.45
+CoreDNS: 1.12.3
 
 Talos is built with Go 1.24.6.
 """
